client/app/scripts/liveblog-edit/components/polls/poll-component.scss
.poll_component {
    padding: 24px;
    border: 0.5px solid #EBEBEB;
    display: flex;
}

.poll_component_title {
    font-size: 16px;
    font-weight: 500;
}

.poll_component_vote_option {
    font-size: 14px;
    font-weight: 400;
    margin-bottom: 0px;
}

.poll_component_vote_percentage {
    width: fit-content;
    align-self: center;
}

.poll_component_subtitle {
    font-size: 12px;
    color: #737373;
}

.poll_option_container {
    position: relative;
    display: flex;
    align-items: center;
}

.poll_option_remove_container {
    position: absolute;
    right: 10px;
    cursor: pointer;
}

.poll_option_add {
   font-size: 12px;
   font-weight: 500;
   color: #8AB6D0; 
   cursor: pointer;
}

.poll_flex_box {
    display: flex;
}

.poll_row {
    flex-direction: row;
}

.poll_column {
    flex-direction: column;
}

.poll_gap_4 {
    gap: 4px
}

.poll_gap_8 {
    gap: 8px
}

.poll_gap_16 {
    gap: 16px
}

.poll_reset_button {
   width: fit-content;
   align-self: end;
}

.poll_vote_container {
    width: 100%;
    align-self: center;
}

.poll_vote_bg {
    height: 4px; 
    width: 100%; 
    background-color: #D9D8D8;
    border-radius: 12px;
}

.poll_vote_fg {
    height: 4px; 
    
    background-color: #5FA8C8; 
    border-radius: 12px;
}

